<resources>
    <string name="total_distance">累计里程(km)</string>
    <string name="notEnoughOneKm">您还未骑够一公里！</string>
    <string name="TeamnotEnoughOneKm">骑行距离不足一公里，且队长离开队伍后，将会解散队伍！</string>
    <string name="TeamernotEnoughOneKmAndOther">您有一只队伍正在运行，且骑行距离不足一公里,退出骑行将会解散队伍，是否转让队伍管理权限？</string>
    <string name="TeamnotEnoughOneKmBymember">组队骑行距离不足一公里，数据将不会保留，结束骑行后，将会离开队伍！</string>

    <string name="cancle_riding">取消骑行</string>
    <string name="setting_permisstion">设置权限</string>
    <string name="continue_driving">继续骑行</string>
    <string name="line_route">路线导航</string>
    <string name="onDriverModel">当前正在骑行模式，跳转后将会暂停骑行！</string>
    <string name="cancle_riding_toMap">确定</string>
    <string name="getRouteLine">正在生成当前骑行轨迹中......</string>
    <string name="start_driver">骑行即将开始，请稍后......</string>
    <string name="share_title">爱摩老司机</string>
    <string name="share_description">今天骑行了</string>
    <string name="stored">已保存至本地相册</string>
    <string name="stored_fail">本地存储失败</string>
    <string name="max_passPoint">最多设置16个途经点!!!</string>
    <string name="people_govement">人民政府</string>
    <string name="upload_to_Net">正在保存骑行数据！请稍后......</string>
    <string name="no_passPoint">请添加目的地!!!</string>
    <string name="gsp_bad">当前Gps信号弱</string>
    <string name="gsp_unknow">当前gps信号未知！</string>
    <string name="finish_navigation">结束导航</string>
    <string name="navigation_will_close">导航已结束，即将返回骑行！</string>
    <string name="upload_fail">上传失败，请检查网络以后，再重新上传！！！</string>
    <string name="upload_cancle">取消上传</string>
    <string name="upload_again">重新上传</string>
    <string name="setting">设置</string>
    <string name="cannot_go_to_there">无法到达改区域！请重新选择</string>
    <string name="create_notice">实时位置共享 一起欢乐骑行</string>
    <string name="create_team">创建队伍</string>
    <string name="delete_team">解散队伍</string>
    <string name="team_create_number_hint">请输入6位队伍口令</string>
    <string name="team_create">组队</string>
    <string name="team_manager">角色管理</string>
    <string name="teamer_pass">队长转让</string>
    <string name="team_setting">车队设置</string>
    <string name="validity_time">有效期至</string>
    <string name="team_name">队伍名字</string>
    <string name="team">组队</string>
    <string name="navigation">导航</string>
    <string name="join_team">加入</string>
    <string name="team_code_error">队伍口令错误！</string>
    <string name="onLocation">获取当前位置失败！请检查网络是否畅通，定位相关权限是否开启后重试！</string>
    <string name="on_create_team">正在创建队伍,请稍后！</string>
    <string name="on_join_team">正在加入队伍,请稍后!</string>
    <string name="invite">邀请</string>
    <string name="remove">移除</string>
    <string name="change_team_nickname">队伍名称</string>
    <string name="delete_member">删除成员</string>
    <string name="choice_role">选择角色</string>
    <string name="delete_empty_warm">请选择要踢出的成员！</string>
    <string name="exit_team">退出队伍</string>
    <string name="single_exit_team_warm">是否退出当前队伍？</string>
    <string name="remove_by_team">您已被移除队伍！</string>
    <string name="release_team">解散队伍</string>
    <string name="leave_team">离开队伍</string>
    <string name="notEnoughOneKm_by_team">距离不足一公里，结束骑行后将会离开队伍！</string>
    <string name="TeamEnoughOneKm">队长离开队伍后，将会解散队伍，是否解散队伍？</string>
    <string name="team_code">队伍口令：</string>
    <string name="share_description_by_team">实时位置共享，一起快乐骑行</string>
    <string name="pass_timer">队长转让</string>
    <string name="select_null">未选择成员！</string>
    <string name="setting_teamer">转让队长</string>
    <string name="EnoughOneKmByTeam">退出骑行后将退出组队，是否继续？</string>
    <string name="EnoughOneKmByTeamerAndOne">退出骑行后将会解散队伍，是否继续？</string>
   <string name="EnoughOneKmByTeamerAndPass">您有一只队伍正在运行，退出骑行将会解散队伍，是否转让队伍管理权限？</string>
    <string name="can_not_delete_myself">无法删除自己！</string>
    <string name="teamer_can_not_passself">队长无法转让队长给自己！</string>
    <string name="login_invalidate">登录超时，请重新登录！</string>
    <string name="getTeamInfoLoading">正在获取队伍信息！</string>
    <string name="secret_name">匿名用户</string>
    <string name="max_member">已超过当前队伍允许最大人数，最大人数为</string>
    <string name="net_error">网络错误</string>
    <string name="get_message">正在获取消息中......</string>
    <string name="get_info_error">获取队伍信息超时！</string>
    <string name="get_point_loading">正在获取定位点！！！请稍后重试</string>
    <string name="loading_disrct">正在加载途经点！</string>
    <string name="get_point_time_out">获取定位点超时！请确保获取手机GPS权限已开启！</string>
    <string name="exception_time_out_error">定位点异常超时错误！请检查网络是否可用！</string>
    <string name="distance_min">距离最短</string>
    <string name="time_min">时间最少</string>
    <string name="speed_min">速度最快</string>
    <string name="money_min">花费最少</string>
    <string name="other_min">备选方案</string>
    <string name="checkNavigation">是否覆盖当前导航！</string>
    <string name="cover_navigation">更新</string>
    <string name="continue_navigation">继续</string>
    <string name="route_change">组队规划线路发生改变，是否改变导航路线？</string>
    <string name="ignore">忽略变换</string>
    <string name="change_route">更换路线</string>
    <string name="licheng_tv">里程(km)</string>
    <string name="hot_title">热门</string>
    <string name="road_book_title">经典路书</string>
    <string name="road_book_nomal_title">路书</string>
    <string name="my_road_book">我的路书</string>
    <string name="loading_route">正在获取规划路径中......</string>
    <string name="cannot_find">无法搜索到路书信息！</string>
    <string name="location_loading">正在获取当前位置......</string>
    <string name="pass_point_detail">途经点详情</string>
    <string name="road_line_detail">路线详情</string>
    <string name="road_simple_detail">路书简介</string>
    <string name="isExChangeLine">是否替换路线</string>
    <string name="getRoadBookLoading">加载路书中......</string>
    <string name="road_line_simple_detail">线路详情</string>
    <string name="get_my_road_http">正在获取我的路书数据......</string>
    <string name="http_loading_roadbook">正在加载路书中......</string>

</resources>
